--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,11 +4,16 @@
     <meta charset="UTF-8">
     <title>Songer Web Application</title>
     <link rel="stylesheet" href="/Css/indexStyle.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@500&display=swap" rel="stylesheet">
+
 </head>
 <body>
 <nav>
     <div class="navContainer">
         <ul>
+            <li><a href="/">Home Page</a></li>
             <li><a href="/hello" class="nav-link">Hello Page</a></li>
             <li><a href="/capitalize/AddYourWordHere" class="nav-link">Capitalize your word Page</a><span class="nav-description"> Add your word after 'capitalize/' to rewrite it in Capitalized letters</span></li>
             <li><a href="/albums" class="nav-link">Albums Page</a></li>
