--- a/src/main/resources/static/Css/album.css
+++ b/src/main/resources/static/Css/album.css
@@ -1,53 +1,117 @@
-/* Apply styles to the entire body */
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Caveat', cursive;
+    font-size: 24px;
     background-color: #f0f0f0;
     margin: 0;
     padding: 0;
 }
 
-/* Style the albums container */
+.navContainer {
+    background-color: #333;
+    color: #fff;
+    padding: 10px 0;
+}
+
+.navContainer ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+}
+
+.navContainer ul li {
+    display: inline;
+    margin-right: 20px;
+}
+
+.navContainer ul li a {
+    text-decoration: none;
+    color: #fff;
+    font-weight: bold;
+    transition: color 0.3s;
+}
+
+.navContainer ul li a:hover {
+    color: rgb(23, 107, 135);
+}
+
 .album-container {
+    margin-top: 30px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
 }
 
-/* Style individual album cards */
 .album-card {
     background-color: #fff;
     border-radius: 5px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
     margin: 10px;
     padding: 20px;
     text-align: center;
-    max-width: 18rem;
+    width: 18rem;
 }
 
-/* Style album images */
+.album-card:hover {
+    background-color: rgba(23, 107, 135, 0.3);
+    transition: background-color 0.3s;
+}
+
 .album-image {
     max-width: 100%;
-    height: auto;
+    max-height: 150px;
+    width: auto;
     border-radius: 5px;
 }
 
-/* Style album titles */
 .album-title {
     font-size: 20px;
     margin-top: 10px;
 }
 
-/* Style artist and details */
 .album-artist {
     font-size: 16px;
     color: #666;
     margin: 5px 0;
 }
 
-/* Style song count and length */
 .album-details {
     font-size: 14px;
     color: #999;
     margin: 5px 0;
+   font-weight: bold;
+}
+
+.album-form {
+    text-align: center;
+    margin-top: 30px;
+    font-weight: bold;
+}
+
+.form-label {
+    display: block;
+    margin-bottom: 5px;
+    color: rgb(23, 107, 135);
+}
+
+.form-input {
+    width: 50%;
+    padding: 10px;
+    margin: 5px 0;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+.form-button {
+    background-color: #333;
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.form-button:hover {
+    background-color: rgb(23, 107, 135);
 }
