--- a/src/main/resources/static/Css/album.css
+++ b/src/main/resources/static/Css/album.css
@@ -115,3 +115,14 @@ body {
 .form-button:hover {
     background-color: rgb(23, 107, 135);
 }
+
+.song-form {
+    text-align: center;
+    margin-top: 30px;
+    font-weight: bold;
+}
+
+#details:hover {
+    color: #952323;
+}
+
