--- a/src/main/resources/templates/hello.html
+++ b/src/main/resources/templates/hello.html
@@ -18,6 +18,7 @@
             <li><a href="/hello" class="nav-link">Hello Page</a></li>
             <li><a href="/capitalize/AddYourWordHere" class="nav-link">Capitalize your word Page</a><span class="nav-description"> Add your word after 'capitalize/' to rewrite it in Capitalized letters</span></li>
             <li><a href="/albums" class="nav-link">Albums Page</a></li>
+            <li><a href="/songs" class="nav-link">Songs Page</a></li>
         </ul>
     </div>
 </nav>
